--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,10 @@ services:
       context: .
       dockerfile: 'Dockerfile'
       args:
-        ZENTARA_ORIGIN: ${ZENTARA_ORIGIN}
+        ORIGIN: ${ORIGIN}
     image: ghcr.io/moritzloewenstein/zentara/zentara:latest
     ports:
-      - '3000:3000'
+      - '${PORT}:3000'
     volumes:
       - zentara_data:/app/data
 
